 * Fix installer (after configuration UI)
 * Add module for relaying events
 * Add filtering to WMI module
 * Fix WMI module
 * Fix PDH problems
 * Add API for rehashing the daemon (or implement it the API is there but does nothing)

2006-06-23 MickeM
 * Might have fixed #53 I was not able to get the problem locally but I have fixed the problem ias at op5 discovered atleast...

2006-06-20 MickeM
 * Fixed #24 crash in NSClient++.exe CheckSystem listpdh | debugpdh
 * Fixed #62 Problems with CheckServiceState and services with spaces.

2006-03-06 MickeM
 ! 0.2.7 released

2006-03-05 MickeM
 * Fixed -v FILEAGE check_nt (NSClient) check.
 * Added licence agreement header to all files

2006-03-04 MickeM
 + Added script_dir option to NRPE scetion as well as some sample scripts in the scripts/
   subdirectory. The script_dir will use all files in this directory as scripts for NRPE
 + Added japanese counters to counters.defs from patch (thanx!!!)

2006-02-25 MickeM
 + Added possibility to check many memory checks in one go, just stack type options.
     type=paged type=physical etc...
 * Fixed a performance check bug in the last nightly.
 * Fixed a potential crash when a maleformed check-file-age command was issued.
 + Added support for more then and NSClient command
 + Added netmask support to allowed_hosts (try with 192.168.0.1/24 and such)
 
2006-02-22 MickeM
 + Added debug output to see if the socket is bound and/or has shutdown.
 * Fixed a potential bug in the threadmanager.
 + Added configuration option for suppressing performance datat to the NRPE section.
   Set performance_data=0 to stop sendoing performancedata to nagios
 + New (better?) (simpler?) eventlog checking
 + Added option to most commands (ignore-perf-data) to suppres performance data
 + Added option CheckAll for checking all auto-start services to checkServiceState.
   Also an exclude=<service> to exclude checking that.
 * Fixed return syntax for PROCSTATE nsclient

2006-02-21 MickeM